# interview-list-sorting

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  analysis.txt  listSorting.py  profile_all.sh  pyproject.toml
list_sorting/: __init__.py  cli.py  lib.py
tests/: conftest.py  data.py  test_cli.py
