[tool.poetry]
name = "list_sorting"
version = "0.0.1"
description = "Programming Test Python"
authors = ["Conor Heine <conor.heine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = {version = "^0.4.0", extras = ["all"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.9.2"
black = "^21.9b0"
isort = "^5.9.3"
pre-commit = "^2.15.0"
tox = "^3.24.4"
mypy = "^0.910"
autoflake = "^1.4"
snakeviz = "^2.1.0"
gprof2dot = "^2021.2.21"
matplotlib = "^3.4.3"
PyQt5 = "^5.15.4"
memory-profiler = "^0.58.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
listSorting = 'list_sorting.cli:cli'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.isort]
profile = "black"
src_paths = ["list_sorting", "tests"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
